--- a/VBM_CS_control.ui
+++ b/VBM_CS_control.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>948</width>
-    <height>735</height>
+    <height>1071</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -69,92 +69,6 @@
        <string>VBM Coordinated System Control</string>
       </property>
      </widget>
-     <widget class="QGroupBox" name="groupBox_2">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>520</y>
-        <width>591</width>
-        <height>181</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <weight>75</weight>
-        <italic>false</italic>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="title">
-       <string>Individual Motors</string>
-      </property>
-      <widget class="QEForm" name="qeform_3">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>120</y>
-         <width>571</width>
-         <height>51</height>
-        </rect>
-       </property>
-       <property name="userLevelVisibility" stdset="0">
-        <enum>QEAbstractWidget::User</enum>
-       </property>
-       <property name="userLevelEnabled" stdset="0">
-        <enum>QEAbstractWidget::User</enum>
-       </property>
-       <property name="uiFile" stdset="0">
-        <string>ppmac1motor_sl.ui</string>
-       </property>
-       <property name="variableSubstitutions" stdset="0">
-        <string>MOTOR=MCT:VBM:DS</string>
-       </property>
-      </widget>
-      <widget class="QEForm" name="qeform">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>20</y>
-         <width>571</width>
-         <height>51</height>
-        </rect>
-       </property>
-       <property name="userLevelVisibility" stdset="0">
-        <enum>QEAbstractWidget::User</enum>
-       </property>
-       <property name="userLevelEnabled" stdset="0">
-        <enum>QEAbstractWidget::User</enum>
-       </property>
-       <property name="uiFile" stdset="0">
-        <string>ppmac1motor_sl.ui</string>
-       </property>
-       <property name="variableSubstitutions" stdset="0">
-        <string>MOTOR=MCT:VBM:US_OB</string>
-       </property>
-      </widget>
-      <widget class="QEForm" name="qeform_2">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>70</y>
-         <width>571</width>
-         <height>51</height>
-        </rect>
-       </property>
-       <property name="userLevelVisibility" stdset="0">
-        <enum>QEAbstractWidget::User</enum>
-       </property>
-       <property name="userLevelEnabled" stdset="0">
-        <enum>QEAbstractWidget::User</enum>
-       </property>
-       <property name="uiFile" stdset="0">
-        <string>ppmac1motor_sl.ui</string>
-       </property>
-       <property name="variableSubstitutions" stdset="0">
-        <string>MOTOR=MCT:VBM:US_IB</string>
-       </property>
-      </widget>
-     </widget>
      <widget class="QGroupBox" name="groupBox_3">
       <property name="geometry">
        <rect>
@@ -190,7 +104,7 @@
         <string>MCT:VBM:CS_Y:t2.D</string>
        </property>
        <property name="text">
-        <string>0.175</string>
+        <string>5.198</string>
        </property>
       </widget>
       <widget class="QELabel" name="qelabel_12">
@@ -209,7 +123,7 @@
         <string>MCT:VBM:CS_Y:t2.E</string>
        </property>
        <property name="text">
-        <string>0.000</string>
+        <string>-1.000</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_4">
@@ -337,7 +251,7 @@
         <string>MCT:VBM:CS_Y:linr_busy</string>
        </property>
        <property name="text">
-        <string>Done</string>
+        <string>Busy</string>
        </property>
       </widget>
       <widget class="QELabel" name="qelabel_15">
@@ -356,7 +270,7 @@
         <string>MCT:VBM:CS_Y:pitch_busy</string>
        </property>
        <property name="text">
-        <string>Done</string>
+        <string>Busy</string>
        </property>
       </widget>
       <widget class="QELabel" name="qelabel_16">
@@ -375,7 +289,7 @@
         <string>MCT:VBM:CS_Y:roll_busy</string>
        </property>
        <property name="text">
-        <string>Done</string>
+        <string>Busy</string>
        </property>
       </widget>
       <widget class="QEPushButton" name="qepushbutton_3">
@@ -555,9 +469,9 @@
       <widget class="QELabel" name="qelabel">
        <property name="geometry">
         <rect>
-         <x>280</x>
+         <x>330</x>
          <y>120</y>
-         <width>60</width>
+         <width>100</width>
          <height>21</height>
         </rect>
        </property>
@@ -570,12 +484,34 @@
         <rect>
          <x>230</x>
          <y>120</y>
-         <width>41</width>
+         <width>100</width>
          <height>16</height>
         </rect>
        </property>
        <property name="text">
-        <string>Status</string>
+        <string>Speed Status</string>
+       </property>
+      </widget>
+      <widget class="QEPushButton" name="qepushbutton_8">
+       <property name="geometry">
+        <rect>
+         <x>520</x>
+         <y>90</y>
+         <width>94</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Busy Reset</string>
+       </property>
+       <property name="variable" stdset="0">
+        <string>MCT:VBM:CS_Y:cs_busy_reset_</string>
+       </property>
+       <property name="clickText">
+        <string>0</string>
+       </property>
+       <property name="pressText">
+        <string>1</string>
        </property>
       </widget>
      </widget>
@@ -598,10 +534,165 @@
        <bool>true</bool>
       </property>
      </widget>
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>520</y>
+        <width>591</width>
+        <height>201</height>
+       </rect>
+      </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <widget class="QWidget" name="tab">
+       <attribute name="title">
+        <string>CS Motors</string>
+       </attribute>
+       <widget class="QEForm" name="qeform_4">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>60</y>
+          <width>571</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="userLevelVisibility" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="userLevelEnabled" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="uiFile" stdset="0">
+         <string>ppmac1motor_sl.ui</string>
+        </property>
+        <property name="variableSubstitutions" stdset="0">
+         <string>MOTOR=MCT:VBM:CS_Y:pitch_motor</string>
+        </property>
+       </widget>
+       <widget class="QEForm" name="qeform_5">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>571</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="userLevelVisibility" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="userLevelEnabled" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="uiFile" stdset="0">
+         <string>ppmac1motor_sl.ui</string>
+        </property>
+        <property name="variableSubstitutions" stdset="0">
+         <string>MOTOR=MCT:VBM:CS_Y:linr_motor</string>
+        </property>
+       </widget>
+       <widget class="QEForm" name="qeform_6">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>110</y>
+          <width>571</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="userLevelVisibility" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="userLevelEnabled" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="uiFile" stdset="0">
+         <string>ppmac1motor_sl.ui</string>
+        </property>
+        <property name="variableSubstitutions" stdset="0">
+         <string>MOTOR=MCT:VBM:CS_Y:roll_motor</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="tab_2">
+       <attribute name="title">
+        <string>Individual Motors</string>
+       </attribute>
+       <widget class="QEForm" name="qeform">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>571</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="userLevelVisibility" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="userLevelEnabled" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="uiFile" stdset="0">
+         <string>ppmac1motor_sl.ui</string>
+        </property>
+        <property name="variableSubstitutions" stdset="0">
+         <string>MOTOR=MCT:VBM:US_OB</string>
+        </property>
+       </widget>
+       <widget class="QEForm" name="qeform_2">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>60</y>
+          <width>571</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="userLevelVisibility" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="userLevelEnabled" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="uiFile" stdset="0">
+         <string>ppmac1motor_sl.ui</string>
+        </property>
+        <property name="variableSubstitutions" stdset="0">
+         <string>MOTOR=MCT:VBM:US_IB</string>
+        </property>
+       </widget>
+       <widget class="QEForm" name="qeform_3">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>110</y>
+          <width>571</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="userLevelVisibility" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="userLevelEnabled" stdset="0">
+         <enum>QEAbstractWidget::User</enum>
+        </property>
+        <property name="uiFile" stdset="0">
+         <string>ppmac1motor_sl.ui</string>
+        </property>
+        <property name="variableSubstitutions" stdset="0">
+         <string>MOTOR=MCT:VBM:DS</string>
+        </property>
+       </widget>
+      </widget>
+     </widget>
      <zorder>label</zorder>
      <zorder>label_8</zorder>
-     <zorder>groupBox_2</zorder>
      <zorder>groupBox_3</zorder>
+     <zorder>tabWidget</zorder>
     </widget>
    </item>
   </layout>
