--- a/TBL_CS_control.ui
+++ b/TBL_CS_control.ui
@@ -66,7 +66,7 @@
        </font>
       </property>
       <property name="text">
-       <string>VBM Coordinated System Control</string>
+       <string>TBL Coordinated System Control</string>
       </property>
      </widget>
      <widget class="QGroupBox" name="groupBox_3">
@@ -75,7 +75,7 @@
         <x>0</x>
         <y>70</y>
         <width>621</width>
-        <height>191</height>
+        <height>151</height>
        </rect>
       </property>
       <property name="font">
@@ -101,7 +101,7 @@
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:t2.D</string>
+        <string>MCT:TBL1:CS_Y:t2.D</string>
        </property>
        <property name="text">
         <string>0.000</string>
@@ -120,7 +120,7 @@
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:t2.E</string>
+        <string>MCT:TBL1:CS_Y:t2.E</string>
        </property>
        <property name="text">
         <string>0.000</string>
@@ -152,43 +152,11 @@
         <string>Vertical</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_5">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>90</y>
-         <width>60</width>
-         <height>17</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Roll</string>
-       </property>
-      </widget>
-      <widget class="QELabel" name="qelabel_13">
-       <property name="geometry">
-        <rect>
-         <x>230</x>
-         <y>90</y>
-         <width>111</width>
-         <height>21</height>
-        </rect>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-       <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:t2.F</string>
-       </property>
-       <property name="text">
-        <string>0.000</string>
-       </property>
-      </widget>
       <widget class="QLabel" name="label_6">
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>120</y>
+         <y>90</y>
          <width>60</width>
          <height>17</height>
         </rect>
@@ -201,7 +169,7 @@
        <property name="geometry">
         <rect>
          <x>90</x>
-         <y>150</y>
+         <y>120</y>
          <width>111</width>
          <height>23</height>
         </rect>
@@ -210,14 +178,14 @@
         <string>Sync Positions</string>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:sync.PROC</string>
+        <string>MCT:TBL1:CS_Y:sync.PROC</string>
        </property>
       </widget>
       <widget class="QEPushButton" name="qepushbutton_2">
        <property name="geometry">
         <rect>
          <x>210</x>
-         <y>150</y>
+         <y>120</y>
          <width>111</width>
          <height>23</height>
         </rect>
@@ -229,7 +197,7 @@
         <string>STOP</string>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:stop</string>
+        <string>MCT:TBL1:CS_Y:stop</string>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(255, 0, 0);</string>
@@ -248,7 +216,7 @@
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:linr_busy</string>
+        <string>MCT:TBL1:CS_Y:linr_busy</string>
        </property>
        <property name="text">
         <string>Done</string>
@@ -267,26 +235,7 @@
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:pitch_busy</string>
-       </property>
-       <property name="text">
-        <string>Done</string>
-       </property>
-      </widget>
-      <widget class="QELabel" name="qelabel_16">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>90</y>
-         <width>60</width>
-         <height>21</height>
-        </rect>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-       <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:roll_busy</string>
+        <string>MCT:TBL1:CS_Y:pitch_busy</string>
        </property>
        <property name="text">
         <string>Done</string>
@@ -305,7 +254,7 @@
         <string>Done</string>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:linr_busy</string>
+        <string>MCT:TBL1:CS_Y:linr_busy</string>
        </property>
        <property name="clickText">
         <string>0</string>
@@ -327,29 +276,7 @@
         <string>Done</string>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:pitch_busy</string>
-       </property>
-       <property name="clickText">
-        <string>0</string>
-       </property>
-       <property name="pressText">
-        <string>0</string>
-       </property>
-      </widget>
-      <widget class="QEPushButton" name="qepushbutton_5">
-       <property name="geometry">
-        <rect>
-         <x>430</x>
-         <y>90</y>
-         <width>60</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Done</string>
-       </property>
-       <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:roll_busy</string>
+        <string>MCT:TBL1:CS_Y:pitch_busy</string>
        </property>
        <property name="clickText">
         <string>0</string>
@@ -374,7 +301,7 @@
         <string>Transform_full.ui</string>
        </property>
        <property name="prioritySubstitutions">
-        <string>P=MCT:VBM:CS_Y, T=t1</string>
+        <string>P=MCT:TBL1:CS_Y, T=t1</string>
        </property>
        <property name="creationOption" stdset="0">
         <enum>QEPushButton::NewTab</enum>
@@ -396,7 +323,7 @@
         <string>Transform_full.ui</string>
        </property>
        <property name="prioritySubstitutions">
-        <string notr="true">P=MCT:VBM:CS_Y, T=t2</string>
+        <string notr="true">P=MCT:TBL1:CS_Y, T=t2</string>
        </property>
        <property name="creationOption" stdset="0">
         <enum>QEPushButton::NewTab</enum>
@@ -412,7 +339,7 @@
         </rect>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:linr</string>
+        <string>MCT:TBL1:CS_Y:linr</string>
        </property>
        <property name="addUnits">
         <bool>true</bool>
@@ -428,23 +355,7 @@
         </rect>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:pitch</string>
-       </property>
-       <property name="addUnits">
-        <bool>true</bool>
-       </property>
-      </widget>
-      <widget class="QELineEdit" name="qelineedit_3">
-       <property name="geometry">
-        <rect>
-         <x>90</x>
-         <y>90</y>
-         <width>125</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:roll</string>
+        <string>MCT:TBL1:CS_Y:pitch</string>
        </property>
        <property name="addUnits">
         <bool>true</bool>
@@ -454,13 +365,13 @@
        <property name="geometry">
         <rect>
          <x>90</x>
-         <y>120</y>
+         <y>90</y>
          <width>125</width>
          <height>23</height>
         </rect>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:speed</string>
+        <string>MCT:TBL1:CS_Y:speed</string>
        </property>
        <property name="addUnits">
         <bool>true</bool>
@@ -470,20 +381,20 @@
        <property name="geometry">
         <rect>
          <x>330</x>
-         <y>120</y>
+         <y>90</y>
          <width>100</width>
          <height>21</height>
         </rect>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:speed_alarm</string>
+        <string>MCT:TBL1:CS_Y:speed_alarm</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_2">
        <property name="geometry">
         <rect>
          <x>230</x>
-         <y>120</y>
+         <y>90</y>
          <width>100</width>
          <height>16</height>
         </rect>
@@ -505,7 +416,7 @@
         <string>Busy Reset</string>
        </property>
        <property name="variable" stdset="0">
-        <string>MCT:VBM:CS_Y:cs_busy_reset_</string>
+        <string>MCT:TBL1:CS_Y:cs_busy_reset_</string>
        </property>
        <property name="clickText">
         <string>0</string>
@@ -514,7 +425,7 @@
         <string>userCalcOut_full.ui</string>
        </property>
        <property name="prioritySubstitutions">
-        <string>P=MCT:VBM:CS_Y,C=cs_busy_reset_</string>
+        <string>P=MCT:TBL1:CS_Y,C=cs_busy_reset_</string>
        </property>
        <property name="creationOption" stdset="0">
         <enum>QEPushButton::NewTab</enum>
@@ -524,32 +435,13 @@
        </property>
       </widget>
      </widget>
-     <widget class="QLabel" name="label">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>210</y>
-        <width>851</width>
-        <height>441</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="pixmap">
-       <pixmap>../../../../beamline/perforce/opa/mct/opis/ui/PDS/VBM_stripe_control.png</pixmap>
-      </property>
-      <property name="scaledContents">
-       <bool>true</bool>
-      </property>
-     </widget>
      <widget class="QTabWidget" name="tabWidget">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>520</y>
         <width>591</width>
-        <height>201</height>
+        <height>151</height>
        </rect>
       </property>
       <property name="currentIndex">
@@ -578,7 +470,7 @@
          <string>ppmac1motor_sl.ui</string>
         </property>
         <property name="variableSubstitutions" stdset="0">
-         <string>MOTOR=MCT:VBM:CS_Y:pitch_motor</string>
+         <string>MOTOR=MCT:TBL1:CS_Y:pitch_motor</string>
         </property>
        </widget>
        <widget class="QEForm" name="qeform_5">
@@ -600,29 +492,7 @@
          <string>ppmac1motor_sl.ui</string>
         </property>
         <property name="variableSubstitutions" stdset="0">
-         <string>MOTOR=MCT:VBM:CS_Y:linr_motor</string>
-        </property>
-       </widget>
-       <widget class="QEForm" name="qeform_6">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>110</y>
-          <width>571</width>
-          <height>51</height>
-         </rect>
-        </property>
-        <property name="userLevelVisibility" stdset="0">
-         <enum>QEAbstractWidget::User</enum>
-        </property>
-        <property name="userLevelEnabled" stdset="0">
-         <enum>QEAbstractWidget::User</enum>
-        </property>
-        <property name="uiFile" stdset="0">
-         <string>ppmac1motor_sl.ui</string>
-        </property>
-        <property name="variableSubstitutions" stdset="0">
-         <string>MOTOR=MCT:VBM:CS_Y:roll_motor</string>
+         <string>MOTOR=MCT:TBL1:CS_Y:linr_motor</string>
         </property>
        </widget>
       </widget>
@@ -649,7 +519,7 @@
          <string>ppmac1motor_sl.ui</string>
         </property>
         <property name="variableSubstitutions" stdset="0">
-         <string>MOTOR=MCT:VBM:US_OB</string>
+         <string>MOTOR=MCT:TBL1:US</string>
         </property>
        </widget>
        <widget class="QEForm" name="qeform_2">
@@ -671,32 +541,29 @@
          <string>ppmac1motor_sl.ui</string>
         </property>
         <property name="variableSubstitutions" stdset="0">
-         <string>MOTOR=MCT:VBM:US_IB</string>
-        </property>
-       </widget>
-       <widget class="QEForm" name="qeform_3">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>110</y>
-          <width>571</width>
-          <height>51</height>
-         </rect>
-        </property>
-        <property name="userLevelVisibility" stdset="0">
-         <enum>QEAbstractWidget::User</enum>
-        </property>
-        <property name="userLevelEnabled" stdset="0">
-         <enum>QEAbstractWidget::User</enum>
-        </property>
-        <property name="uiFile" stdset="0">
-         <string>ppmac1motor_sl.ui</string>
-        </property>
-        <property name="variableSubstitutions" stdset="0">
-         <string>MOTOR=MCT:VBM:DS</string>
+         <string>MOTOR=MCT:TBL1:DS</string>
         </property>
        </widget>
       </widget>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>250</y>
+        <width>691</width>
+        <height>281</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>tbl.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
      </widget>
      <zorder>label</zorder>
      <zorder>label_8</zorder>
